# mamadou

./: .env  .env.example  Dockerfile  README.md  auth_project.py  pyproject.toml
src/api_naturalize/: main.py  model_generator.py
src/api_naturalize/answer/models/: answer_model.py
src/api_naturalize/answer/routers/: answer_routes.py
src/api_naturalize/answer/schemas/: answer_schemas.py
src/api_naturalize/auth/models/: user_model.py
src/api_naturalize/auth/routers/: auth_routers.py  user_routes.py
src/api_naturalize/auth/schemas/: user_schemas.py
src/api_naturalize/course/models/: course_model.py
src/api_naturalize/course/routers/: course_routes.py
src/api_naturalize/course/schemas/: course_schemas.py
src/api_naturalize/dashboard/routers/: dashboard.py
src/api_naturalize/dashboard/schemas/: dashboard.py
src/api_naturalize/database/: database.py
src/api_naturalize/frequent_question/models/: frequent_question_model.py
src/api_naturalize/frequent_question/routers/: frequent_question_routes.py
src/api_naturalize/frequent_question/schemas/: frequent_question_schemas.py
src/api_naturalize/leader_board/routers/: leader_board_routes.py
src/api_naturalize/leader_board/schemas/: leader_board_schemas.py
src/api_naturalize/lesson/models/: lesson_model.py
src/api_naturalize/utils/: account_status.py  email_config.py  token_generation.py  user_info.py  user_role.py
src/mamadou/: main.py  model_generator.py
src/mamadou/database/: database.py
src/mamadou/utils/: account_status.py  email_config.py  user_info.py
(+38 files in other folders)
